[package]
name = "ramp2"
version = "0.1.5"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/ramp.git"
description = "RAMP is the glue for Maverick OS, Air Servers, And Prisms UI abstraction"
documentation = "https://docs.rs/ramp"


[dependencies]
maverick_os = "0.3.5"
#maverick_os = {package = 'maverick_os', path = "../maverick_os"}
prism = {version = "0.1.4", package = "prism2"}
#prism = {package = 'prism2', path = "../prism"}
wgpu_canvas = "5.0.6"
#wgpu_canvas = {path = "../wgpu_canvas"}